changed gradle config to support testing through robolectric